[package]
name = "sticktool"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"

description = "A telegram tool for creating trap stickerpacks from single photo or stickerpacks with all photos from specified directory."

[dependencies]
opencv = "0.94.4"
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
bytes = "1.10.0"
